vemo-app/main/default/objects/PaymentAllocationDetail__c/PaymentAllocationDetail__c.object-meta.xml
<CustomObject>
    <label>Payment Allocation Detail</label>
    <nameField>
        <displayFormat>PADN-{0000000000}</displayFormat>
        <label>PaymentAllocationDetail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>