vemo-app/main/default/objects/PaymentAllocationDetail__c/fields/AmountAllocated__c.field-meta.xml
<CustomField>
    <fullName>AmountAllocated__c</fullName>
    <label>Amount Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>