vemo-app/main/default/objects/PaymentAllocationDetail__c/fields/PaymentAllocation__c.field-meta.xml
<CustomField>
    <fullName>PaymentAllocation__c</fullName>
    <label>Payment Allocation</label>
    <referenceTo>PaymentAllocation__c</referenceTo>
    <relationshipLabel>Payment Allocation Details</relationshipLabel>
    <relationshipName>Payment_Allocation_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>