vemo-app/main/default/objects/PaymentAllocationDetail__c/fields/StudentProgramAmountDue__c.field-meta.xml
<CustomField>
    <fullName>StudentProgramAmountDue__c</fullName>
    <label>Student Program Amount Due</label>
    <referenceTo>StudentProgramAmountDue__c</referenceTo>
    <relationshipLabel>Payment Allocation Details</relationshipLabel>
    <relationshipName>Payment_Allocation_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>